<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="600dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DayOfWeek"
        app:layout_constraintVertical_bias="0.072">

        <Button
            android:id="@+id/Mon"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Mon" />

        <Button
            android:id="@+id/Tue"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Tue" />

        <Button
            android:id="@+id/Wed"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Wed" />

        <Button
            android:id="@+id/Thu"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Thu" />

        <Button
            android:id="@+id/Sat"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Sat" />

        <Button
            android:id="@+id/Fri"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Fri" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lesson1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/room1"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:text="TextView" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lesson2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/room2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_Open_FullSchedule"
        android:layout_width="321dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/Blue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Button_Open_FullSchedule"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DayOfWeek"
        android:layout_width="389dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/WeekDay"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>